--- a/forside.html
+++ b/forside.html
@@ -9,7 +9,7 @@
   <body>
     <div class="grid-container">
       <div class="item1">
-        <a href="forside.html"> <img src="logo.jpg" alt="logo"></a>
+        <a href="forside.html"> <img src="/billeder/logo.jpg" alt="logo"></a>
       </div>
       <header class="item2">
         <h1>
