--- a/forside.html
+++ b/forside.html
@@ -9,7 +9,7 @@
   <body>
     <div class="grid-container">
       <div class="item1">
-        <a href="forside.html"> <img src="/billeder/logo.jpg" alt="logo"></a>
+        <a href="forside.html"> <img src="billeder/logo.jpg" alt="logo"></a>
       </div>
       <header class="item2">
         <h1>
@@ -36,7 +36,7 @@
         </ul>
       </nav>
       <div class="item4">
-        <div class="picture"> <img src="potrættilpræsentationsport.jpg" alt="portræt">
+        <div class="picture"> <img src="billeder/potrættilpræsentationsport.jpg" alt="portræt">
         </div>
       </div>
       <main class="item5">
