--- a/kodemitarbejde.html
+++ b/kodemitarbejde.html
@@ -2,7 +2,7 @@
 <html lang="da" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="kode.css">
     <script src="https://kit.fontawesome.com/8385bf9083.js" crossorigin="anonymous"></script>
     <title>Julie Bekker Præsentationsportfolio</title>
   </head>
